# actix-web-api-boilerplate

./: Cargo.toml  README.md
scripts/: init_db.sh
scripts/migrations/: 20240524163442_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs
tests/: db_connection_check.rs  health_check.rs  utils.rs
