[package]
name = "email_service"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email_service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.6.0"
reqwest = "0.12.4"
tokio = "1.37.0"
